# test-qt-vscode

./: .gitignore  CMakeLists.txt  README.md  func.ps1  main.cpp  main.py  requirements
Scripts/: build.ps1  clean.ps1  config.ps1  dll.ps1  gcc_dll.ps1  init.ps1
init/: qt.ps1  vcpkg.ps1
petool/: copydll.py  dll.go  go.mod  go.sum
src/: gui.cpp  main.cpp
